added more complete JVM flags