@@ -1,2 +1,3 @@
 set SCRIPT_DIR=%~dp0
-java %SBT_OPTS% -Xmx512M -jar "%SCRIPT_DIR%sbt-launch.jar" %*
+SBT_OPTS=-Dfile.encoding=UTF8 -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256m
+java %SBT_OPTS% -jar "%SCRIPT_DIR%sbt-launch.jar" %*
